# skilled

./: .coverage  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  conftest.py  env.example  pyproject.toml  tests.py
.github/workflows/: auto-pr-description.yml
apps/: admin_forms.py  admin_mixins.py  log_filters.py
apps/bots/: admin.py  models.py  views.py
apps/bots/migrations/: 0001_initial.py  0002_bot_enabled.py  0003_bot_telegram_update_offset.py  0004_remove_bot_provider.py  0005_remove_bot_skill.py  0006_alter_bot_telegram_api_token.py  0007_bot_webhook_disabled_at_bot_webhook_enabled_at.py  0008_bot_webhook_secret.py  0009_remove_bot_profile_remove_bot_wrapper.py
apps/bots/tests/: test_admin.py  test_models.py  test_views.py
apps/common/: fields.py
apps/common/tests/: test_fields.py
apps/health/: urls.py
apps/health/tests/: test_health.py
apps/inference/: admin.py  models.py  tasks.py  worker.py
apps/inference/migrations/: 0001_initial.py  0002_remove_profile_reasoning_summary_and_more.py  0003_profile_provider_alter_profile_name_and_more.py  0004_populate_profile_provider.py  0005_alter_profile_provider.py  0006_alter_provider_auth_token.py  0007_worker.py
apps/inference/tests/: test_admin.py  test_client.py  test_migrations.py  test_models.py  test_worker.py  test_worker_tasks.py
apps/jobs/: admin.py  apps.py  intake.py  models.py  signals.py  tasks.py
apps/jobs/management/: supervisor.py
apps/jobs/management/commands/: dev.py  llm_worker_once.py  start.py  telegram_deliver_once.py  telegram_ingest_once.py
apps/jobs/migrations/: 0001_initial.py  0002_job_reply_to_message_id.py  0003_remove_job_received_at_alter_job_options.py  0004_job_worker_indexes.py  0005_job_delivery_started_at.py  0006_backfill_delivery_started_at_and_job_constraints.py  0007_rename_sent_at_to_delivery_finished_at.py  0008_remove_job_job_delivery_started_requires_output_and_more.py  0009_remove_job_job_ready_delivery_idx_and_more.py  0010_intakebuffer.py  0011_remove_intakebuffer_last_message_at_and_more.py  0012_alter_intakebuffer_last_message_ts_and_more.py  0013_populate_worker_from_bot.py
apps/jobs/tests/: test_admin.py  test_logging.py  test_management.py  test_migrations.py  test_models.py  test_signals.py  test_tasks_branches.py
apps/llm/: admin.py  client.py  models.py  tasks.py  worker.py
apps/llm/migrations/: 0001_initial.py  0002_alter_worker_table.py
apps/llm/tests/: test_client.py  test_models.py  test_tasks.py
apps/ops/: apps.py  models.py  q2.py
apps/ops/management/commands/: start.py
apps/ops/migrations/: 0001_remove_legacy_engine_schedules.py
apps/ops/tests/: test_health.py  test_management.py  test_migrations.py  test_q2.py  test_schedules.py
apps/workers/tests/: test_llm.py
config/: health.py  settings.py  settings_pytest.py  urls.py
config/tests/: runner.py  test_health.py  test_settings.py
engine/: log_filters.py
engine/common/: admin.py  admin_forms.py  fields.py  log_filters.py  sanitize.py  schedules.py
engine/common/tests/: test_fields.py  test_log_filters.py  test_sanitize.py  test_schedules.py
engine/processing/: __init__.py  apps.py  models.py
engine/processing/tests/: test_models.py  test_proxy.py  test_schedules.py
engine/proxy/: apps.py  models.py  worker.py
engine/proxy/migrations/: 0001_remove_stale_q2_schedule.py
engine/proxy/tests/: test_proxy.py  test_schedules.py
engine/telegram/: admin.py  apps.py  client.py  intake.py  models.py  signals.py  tasks.py  views.py  worker.py
engine/telegram/management/commands/: dev.py
engine/telegram/migrations/: 0001_initial.py  0002_migrate_data_from_legacy_tables.py  0003_remove_job_tg_job_raw_output_requires_llm_finished_and_more.py  0004_update_q2_func_paths.py  0005_job_processing_finished_requires_started.py  0006_split_job_errors.py  0007_refresh_job_error_constraints.py  0008_namespace_q2_schedule_names.py
engine/telegram/tests/: test_admin.py  test_client.py  test_delivery.py  test_logging.py  test_management.py  test_models.py  test_predicates.py  test_schedules.py  test_signals.py  test_tasks_branches.py  test_views.py  test_worker.py
engine/tests/: test_log_filters.py
engine/workers/: apps.py  models.py
engine/workers/tests/: test_proxy.py  test_schedules.py  test_telegram.py
tests/: test_core.py
workers/: llm.py  telegram.py
workers/tests/: test_llm.py  test_telegram.py
